@startuml
title 本機 SMTP Email 架構

left to right direction
skinparam componentStyle rectangle

package "campaign module" {
    [Campaign triggers\nAPI / Scheduler / Domain Event Consumer] as CampaignTriggers
}

package "shared module" {
    [ReachRequested event] as ReachRequested
}

queue "Kafka\nreach.requested" as Kafka

package "reach module" {
    package "orchestrator" {
        [ReachRequestedConsumer\n+ ReachRequestLander\n+ PagedAudienceExpander] as Orchestrator
    }

    package "dispatcher" {
        [ReachTaskDispatcher] as Dispatcher
        [ChannelAdapterRegistry] as Registry
    }

    package "channel" {
        interface "ChannelAdapter" as ChannelAdapter
        [EmailAdapter] as EmailAdapter
        interface "EmailProviderClient" as EmailProviderClient
        [LocalSmtpEmailProviderClient] as LocalProvider
        [LocalEmailTemplateRenderer] as Renderer
        [LocalSmtpEmailProperties] as LocalProps
        [LocalSmtpEmailConfig] as LocalConfig
    }
}

database "PostgreSQL" as DB
component "Spring Mail\nJavaMailSender" as JavaMailSender
node "Mailpit\nSMTP :1025\nWeb UI :8025" as Mailpit
artifact ".env / local profile" as Env

CampaignTriggers --> ReachRequested : creates
ReachRequested --> Kafka : publish

Kafka --> Orchestrator : consume
Orchestrator --> DB : reach_request\nreach_task(PENDING)

Dispatcher --> DB : claim / write-back
Dispatcher --> Registry : lookup EMAIL
Registry --> ChannelAdapter
EmailAdapter ..|> ChannelAdapter
EmailAdapter --> EmailProviderClient : deliver through breaker
LocalProvider ..|> EmailProviderClient
LocalProvider --> Renderer : render local message
LocalProvider --> JavaMailSender : SMTP send
JavaMailSender --> Mailpit : SMTP

LocalConfig --> LocalProvider : registers only when\nlocal + smtp-local
LocalConfig --> JavaMailSender
LocalConfig --> LocalProps
Env --> LocalProps : host / port / from / recipient

note right of LocalProvider
  本機 provider 固定寄到 configured recipient。
  它不新增會員 contact table，
  也不把 email address 寫入 reach_task 或 event。
end note

note bottom of Mailpit
  Mailpit 只捕捉本機信件，
  不外寄到真實收件人。
end note

@enduml
